<resources>
    <string name="app_name" translatable="false">Master Of Analysis</string>
    <string name="google_sign_in">Sign In</string>
    <string name="sign_in_privacy">I accept the Privacy Policy</string>
    <string name="sign_in_privacy_false">You must accept the Privacy Policy to continue</string>
    <string name="privacy_agree">Agree</string>
    <string name="privacy_disagree">Disagree</string>
    <string name="yetkilendirmehatasi">Authorization Error.</string>
    <string name="kayit_hatasi">Something went wrong. Please restart the application</string>
    <string name="no_referanceid">Reference Number Not Found</string>
    <string name="satin_alim_yok">Product not yet loaded. Please try again later</string>
    <string name="iletisim">Contact Us</string>
    <string name="update">Update Available</string>
    <string name="update_text">A new version of the app is released!</string>
    <string name="download">Download</string>
    <string name="kalansure">Remaining Time</string>
    <string name="ok">OK</string>
    <string name="close">Close</string>
    <string name="giveup">Cancel</string>
    <string name="delete_user">Would you like to delete your Personal Data?</string>
    <string name="purchaseconfirmationtitle">Coupon Will Be Opened</string>
    <string name="purchaseconfirmationbody">A coupon will be opened, and the coupon balance will be deducted from your account. Do you confirm?</string>
    <string name="whopurchased">Number of Purchasers</string>
    <string name="creditbalance">Credit Balance</string>
    <string name="elite">VIP Membership</string>
    <string name="ReferenceNumber">Your Reference Number</string>
    <string name="EnterReferenceNumber">Enter Reference Number</string>
    <string name="onayla">CONFIRM</string>
    <string name="delete_user_body">Your account\'s data will be deleted as described in the privacy policy, and this action cannot be undone. \n
        To delete your Personal Data, you need to type CONFIRM in capital letters in the field below.</string>
    <string name="error_delete_user">Type CONFIRM in capital letters</string>
    <string name="GettheReward">Get the Reward</string>
    <string name="freemenu">Free</string>
    <string name="creditmenu">Credit</string>
    <string name="elitemenu">VIP</string>
    <string name="paymentmenu">Payment</string>
    <string name="Won">Won</string>
    <string name="Lost">Lost</string>
    <string name="Waiting">Waiting</string>
    <string name="Odds">Odds</string>
    <string name="Credit">Credit</string>
    <string name="CouponWillBeOpened">Coupon will be opened</string>
    <string name="Doyouconfirm">Do you confirm?</string>
    <string name="InsufficientBalance">Insufficient Credit</string>
    <string name="gotopaymentpage">Go to the Payment page now to access credited predictions! Don\'t miss out on great opportunities</string>
    <string name="YouCannotWrite">You cannot write your own Reference Number</string>
    <string name="MustBeDigits">Reference Number must be 10 digits</string>
    <string name="YouHaveSuccessfully">You have successfully claimed your reward</string>
    <string name="noelitemember">You are not an vıp Member</string>
    <string name="gotopaymentpageelite">Go to the Payment page now to access VIP predictions! Don\'t miss out on great opportunities</string>
    <string name="errorpurchase">Purchase Failed!</string>
    <string name="errorpurchasebody">Your purchase was unsuccessful. If you believe there\'s an error, please contact us.</string>
    <string name="successpurchase">Congratulations!</string>
    <string name="successpurchasebody">You have successfully made the purchase. The items you bought have been added to your account.</string>
    <string name="buy">Buy</string>
    <string name="bantitle">Access to the Application is Forbidden</string>
    <string name="banbody">Your use of the application has been prohibited due to invalid and misleading requests!</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="delete_account">Delete Personal Data</string>
    <string name="kampanyabitis">Campaign End Date</string>
    <string name="suredoldu">Time\'s up!</string>
    <string name="kampanyayakalansure">Remaining time until the campaign ends</string>
    <string name="day">%d Day</string>
    <string name="hours">%d Hours</string>
    <string name="minute">%d Minute</string>
    <string name="second">%d Second</string>
    <string name="abonelik_hakkinda_baslik">Information About Subscription Products</string>
    <string name="profilmenu">Profile</string>
</resources>
