<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/ucretsiz"
        android:title="@string/freemenu"
        android:icon="@drawable/ucretsiz_icon"
        android:checked="false"/>
    <item
        android:id="@+id/kredili"
        android:title="@string/creditmenu"
        android:icon="@drawable/kredili_icon"
        android:checked="false"/>
    <item
        android:title=""
        android:enabled="false"/>
    <item
        android:id="@+id/seckin"
        android:title="@string/elitemenu"
        android:icon="@drawable/seckin_icon"/>
    <item
        android:id="@+id/odeme"
        android:title="@string/paymentmenu"
        android:icon="@drawable/odeme_icon"/>
</menu>