<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="10dp"
        android:layout_centerInParent="true"
        android:layout_margin="20dp"
        app:cardElevation="50dp">
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/referencebaslik"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/baloo_bold"
                    style="@style/text_color_black"
                    android:textSize="18sp"
                    android:text="@string/delete_user"
                    android:gravity="center"
                    android:layout_marginLeft="25dp"
                    android:layout_marginRight="25dp"
                    android:layout_marginTop="15dp"
                    android:layout_gravity="center"/>
                <TextView
                    android:id="@+id/referenceaciklama"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/baloo"
                    style="@style/text_color_black"
                    android:textSize="16sp"
                    android:text="@string/delete_user_body"
                    android:gravity="center"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"
                    android:layout_gravity="center"/>
                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/filledTextField"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/onayla"
                    android:layout_marginLeft="50dp"
                    android:layout_marginRight="50dp"
                    style="@style/boxBackgroundColor"
                    android:maxEms="10"
                    app:counterEnabled="true"
                    app:counterMaxLength="10"
                    android:layout_marginTop="20dp">
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/referans_two"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:maxLength="10"
                        style="@style/text_color_whiteerer"
                        android:inputType="textCapCharacters"
                        android:textStyle="bold"/>
                </com.google.android.material.textfield.TextInputLayout>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center"
                    android:layout_gravity="center"
                    android:layout_marginTop="15dp"
                    android:layout_marginBottom="15dp">
                    <Button
                        android:id="@+id/cancel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/giveup"
                        android:minWidth="120dp"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:layout_marginRight="10dp"
                        style="@style/buttonkirmizi"/>
                    <Button
                        android:id="@+id/okey"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/onayla"
                        android:layout_marginLeft="10dp"
                        android:minWidth="120dp"
                        android:layout_gravity="center"
                        android:gravity="center"
                        style="@style/buttonsari"/>
                </LinearLayout>
            </LinearLayout>
        </ScrollView>
    </androidx.cardview.widget.CardView>

</RelativeLayout>