<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_margin="20dp"
        android:foreground="@drawable/frame_border">
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="10dp"
        app:cardElevation="50dp">
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/bg_card_profil">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_margin="15dp">
                <Button
                    android:id="@+id/privacy_policy"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/privacy_policy"
                    android:minWidth="120dp"
                    android:minHeight="60dp"
                    android:layout_gravity="center"
                    android:textAllCaps="false"
                    android:gravity="center"
                    android:backgroundTint="@color/buttonsari"/>
                <Button
                    android:id="@+id/delete_user"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/delete_account"
                    android:textAllCaps="false"
                    android:minHeight="60dp"
                    android:minWidth="120dp"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:backgroundTint="@color/buttonsari"/>
                <LinearLayout
                    android:id="@+id/lyt_iletisim"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/lilacenter"
                    android:orientation="vertical"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:visibility="gone"
                    android:paddingBottom="20dp"
                    android:paddingTop="20dp">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/iletisim"
                        android:layout_gravity="center"
                        android:textColor="@color/textColorX"
                        style="@style/text_color_google"
                        android:fontFamily="@font/baloo"
                        android:gravity="center"
                        android:textSize="22sp" />
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:orientation="horizontal"
                        android:layout_marginTop="20dp">
                        <ImageView
                            android:id="@+id/imginstagram"
                            android:layout_width="48dp"
                            android:layout_height="48dp"
                            android:src="@drawable/instagram"
                            android:layout_gravity="center"
                            android:visibility="gone"/>
                        <ImageView
                            android:id="@+id/imgwhatsapp"
                            android:layout_width="48dp"
                            android:layout_height="48dp"
                            android:layout_marginLeft="10dp"
                            android:src="@drawable/whatsapp"
                            android:layout_gravity="center"
                            android:visibility="gone"/>
                        <ImageView
                            android:id="@+id/imgtelegram"
                            android:layout_width="48dp"
                            android:layout_height="48dp"
                            android:layout_marginLeft="10dp"
                            android:src="@drawable/telegram"
                            android:layout_gravity="center"
                            android:visibility="gone"/>
                        <ImageView
                            android:id="@+id/imgyoutube"
                            android:layout_width="48dp"
                            android:layout_height="48dp"
                            android:layout_marginLeft="10dp"
                            android:src="@drawable/youtube"
                            android:layout_gravity="center"
                            android:visibility="gone"/>
                        <ImageView
                            android:id="@+id/imgchrome"
                            android:layout_width="48dp"
                            android:layout_height="48dp"
                            android:layout_marginLeft="10dp"
                            android:src="@drawable/chrome"
                            android:layout_gravity="center"
                            android:visibility="gone"/>
                    </LinearLayout>
                </LinearLayout>
                <Button
                    android:id="@+id/close"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/close"
                    android:minWidth="120dp"
                    android:layout_marginTop="15dp"
                    android:layout_gravity="center"
                    android:gravity="center"
                    style="@style/buttonkirmizi"/>
            </LinearLayout>
        </ScrollView>
    </androidx.cardview.widget.CardView>
    </FrameLayout>
</RelativeLayout>