<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/view_pager"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_margin="16dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <LinearLayout
        android:id="@+id/upper_row"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="16dp"
        android:paddingTop="5sp"
        app:layout_constraintTop_toBottomOf="@id/view_pager">

        <androidx.cardview.widget.CardView
            android:id="@+id/card_ucretsiz"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_weight="1"
            app:cardCornerRadius="17dp">

            <!-- Kart içeriği -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="vertical"
                android:background="@drawable/bg_card_ucretsiz">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:contentDescription="icon"
                    android:src="@drawable/seckin_icon" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/freemenu"
                    android:textColor="@android:color/black"
                    android:textSize="18sp"
                    android:paddingBottom="5sp"/>

            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <!-- İkinci CardView -->
        <androidx.cardview.widget.CardView
            android:id="@+id/card_vip"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_weight="1"
            app:cardCornerRadius="17dp">

            <!-- Kart içeriği -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="vertical"
                android:background="@drawable/bg_card_vip">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:contentDescription="icon"
                    android:src="@drawable/odeme_icon" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/elitemenu"
                    android:textColor="@android:color/black"
                    android:textSize="18sp"
                    android:paddingBottom="5sp" />

            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>

    <!-- Alt satır -->
    <LinearLayout
        android:id="@+id/lower_row2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="7dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/upper_row"
        tools:layout_editor_absoluteX="0dp">

        <!-- İlk CardView -->
        <androidx.cardview.widget.CardView
            android:id="@+id/card_kredili"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_weight="1"
            app:cardCornerRadius="17dp">

            <!-- Kart içeriği -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="vertical"
                android:background="@drawable/bg_card_kredili">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:contentDescription="icon"
                    android:src="@drawable/seckin_icon" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/creditmenu"
                    android:textColor="@android:color/black"
                    android:textSize="18sp"
                    android:paddingBottom="5sp"/>

            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <!-- İkinci CardView -->
        <androidx.cardview.widget.CardView
            android:id="@+id/card_odeme"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_weight="1"
            app:cardCornerRadius="17dp">

            <!-- Kart içeriği -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="vertical"
                android:background="@drawable/bg_card_odeme">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:contentDescription="icon"
                    android:src="@drawable/odeme_icon" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/paymentmenu"
                    android:textColor="@android:color/black"
                    android:textSize="18sp"
                    android:paddingBottom="5sp"/>

            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/lower_row"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/lower_row2"
        tools:layout_editor_absoluteX="0dp">

        <!-- İlk CardView -->
        <androidx.cardview.widget.CardView
            android:id="@+id/card_profil"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_weight="1"
            app:cardCornerRadius="17dp">

            <!-- Kart içeriği -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_card_profil"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingTop="15sp"
                    android:src="@drawable/seckin_icon"
                    app:tint="@color/textColorX" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:paddingBottom="8sp"
                    android:text="@string/profilmenu"
                    android:textColor="@color/textColorX"
                    android:textSize="18sp" />

            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>

    <!-- logo ve uygulama adı -->
    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@+id/lower_row"
        tools:layout_editor_absoluteX="86dp">

        <TextView
            android:id="@+id/app_name_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:gravity="center_horizontal"
            android:text="@string/app_name"
            android:textColor="@color/textColorX"
            android:textSize="24sp" />

        <androidx.cardview.widget.CardView
            android:id="@+id/crdview"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginTop="10dp"
            android:clickable="false"
            android:focusable="true"
            android:foreground="?android:attr/selectableItemBackground"
            app:cardCornerRadius="75dp"
            app:cardElevation="0dp">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerInside"
                android:src="@drawable/logo" />
        </androidx.cardview.widget.CardView>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
